feat: crud Restaurants and MenuItem, create register, login for LocalUsers

--- a/src/FastDeliveruu.Application/FastDeliveruu.Application.csproj
+++ b/src/FastDeliveruu.Application/FastDeliveruu.Application.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <ItemGroup>
-    <ProjectReference Include="..\FastDeliveruu.Domain\FastDeliveruu.Domain.csproj" />
+    <ProjectReference Include="..\FastDeliveruu.Domain\FastDeliveruu.Domain.csproj"/>
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
+  </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
 </Project>
