--- a/src/FastDeliveruu.Api/FastDeliveruu.Api.csproj
+++ b/src/FastDeliveruu.Api/FastDeliveruu.Api.csproj
@@ -6,13 +6,14 @@
     <UserSecretsId>93e8e15c-267e-4a1e-a0e0-d0e9083d8f1c</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.10" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.10"/>
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.10"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FastDeliveruu.Application\FastDeliveruu.Application.csproj" />
-    <ProjectReference Include="..\FastDeliveruu.Infrastructure\FastDeliveruu.Infrastructure.csproj" />
+    <ProjectReference Include="..\FastDeliveruu.Application\FastDeliveruu.Application.csproj"/>
+    <ProjectReference Include="..\FastDeliveruu.Infrastructure\FastDeliveruu.Infrastructure.csproj"/>
   </ItemGroup>
 </Project>
