--- a/src/FastDeliveruu.Api/FastDeliveruu.Api.csproj
+++ b/src/FastDeliveruu.Api/FastDeliveruu.Api.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.10"/>
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.10"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FastDeliveruu.Application\FastDeliveruu.Application.csproj"/>
