refactor: make authen cleaner

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "FastdeliveruuSqlConnection": "Server=localhost\\dockersql,1433;Database=fastdeliveruu;TrustServerCertificate=True"
+  },
+  "JwtSettings": {
+    "Secret": "",
+    "ExpiryMinus": 60,
+    "Issuer": "FastDeliveruu",
+    "Audience": "FastDeliveruu"
   }
 }
