--- a/src/FastDeliveruu.Api/appsettings.Development.json
+++ b/src/FastDeliveruu.Api/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "Secret": "",
+    "ExpiryMinus": 60,
+    "Issuer": "FastDeliveruu",
+    "Audience": "FastDeliveruu"
   }
 }
