--- a/src/FastDeliveruu.Infrastructure/FastDeliveruu.Infrastructure.csproj
+++ b/src/FastDeliveruu.Infrastructure/FastDeliveruu.Infrastructure.csproj
@@ -7,6 +7,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.10"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1"/>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
