feat: make error handling cleaner using FluentResult,

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -11,7 +11,7 @@
   },
   "JwtSettings": {
     "Secret": "",
-    "ExpiryMinus": 60,
+    "ExpiryMinutes": 60,
     "Issuer": "FastDeliveruu",
     "Audience": "FastDeliveruu"
   }
