--- a/src/FastDeliveruu.Infrastructure/FastDeliveruu.Infrastructure.csproj
+++ b/src/FastDeliveruu.Infrastructure/FastDeliveruu.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.10"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10"/>
+    <PackageReference Include="MailKit" Version="4.0.0"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
