feat: confirm email without using Identity provider

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -12,6 +12,7 @@
   "JwtSettings": {
     "Secret": "",
     "ExpiryMinutes": 60,
+    "EmailConfirmationExpiryMinutes": 10,
     "Issuer": "FastDeliveruu",
     "Audience": "FastDeliveruu"
   }
