--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -1,9 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log-",
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true
+        }
+      }
+    ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
