--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -4,6 +4,12 @@
       "Serilog.Sinks.Console",
       "Serilog.Sinks.File"
     ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning"
+      }
+    },
     "WriteTo": [
       {
         "Name": "Console"
