feat: add crud shipper, change name

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -34,5 +34,18 @@
     "EmailConfirmationExpiryMinutes": 10,
     "Issuer": "FastDeliveruu",
     "Audience": "FastDeliveruu"
+  },
+  "Payment": {
+    "VnPay": {
+      "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+      "Api": "https://sandbox.vnpayment.vn/merchant_webapi/api/transaction",
+      "TmnCode": "",
+      "HashSecret": "",
+      "Version": "2.1.0",
+      "Command": "pay",
+      "CurrCode": "VND",
+      "Locale": "vn",
+      "ReturnUrl": "http://localhost:5233/api/v1/orders/vnpay-return"
+    }
   }
 }
