refactor: small refactor

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -26,7 +26,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FastdeliveruuSqlConnection": "Server=localhost\\dockersql,1433;Database=fastdeliveruu;TrustServerCertificate=True"
+    "FastdeliveruuSqlConnection": "Server=localhost\\sql-server-2017,1433;Database=fastdeliveruu;TrustServerCertificate=True"
   },
   "JwtSettings": {
     "Secret": "",
