--- a/src/FastDeliveruu.Application/FastDeliveruu.Application.csproj
+++ b/src/FastDeliveruu.Application/FastDeliveruu.Application.csproj
@@ -5,8 +5,13 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2"/>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1"/>
     <PackageReference Include="FluentResults" Version="3.15.0"/>
+    <PackageReference Include="MediatR" Version="11.0.0"/>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0"/>
+    <PackageReference Include="Mapster" Version="6.5.1"/>
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0"/>
+    <PackageReference Include="FluentValidation" Version="10.4.0"/>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
