--- a/src/FastDeliveruu.Application/FastDeliveruu.Application.csproj
+++ b/src/FastDeliveruu.Application/FastDeliveruu.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0"/>
     <PackageReference Include="Mapster" Version="6.5.1"/>
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0"/>
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0"/>
     <PackageReference Include="FluentValidation" Version="10.4.0"/>
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0"/>
   </ItemGroup>
