--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -25,8 +25,9 @@
     ]
   },
   "AllowedHosts": "*",
+  "Urls": "http://*:5233",
   "ConnectionStrings": {
-    "FastdeliveruuSqlConnection": "Server=localhost\\sql-server-2017,1433;Database=fastdeliveruu;TrustServerCertificate=True"
+    "FastdeliveruuSqlConnection": "Server=fastdeliveruu.db;Database=fastdeliveruu;TrustServerCertificate=True"
   },
   "JwtSettings": {
     "Secret": "",
