--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -25,7 +25,7 @@
     ]
   },
   "AllowedHosts": "*",
-  "Urls": "http://*:5233",
+  //"Urls": "http://*:5233",
   "ConnectionStrings": {
     "FastdeliveruuSqlConnection": "Server=fastdeliveruu.db;Database=fastdeliveruu;TrustServerCertificate=True"
   },
