--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -27,7 +27,8 @@
   "AllowedHosts": "*",
   //"Urls": "http://*:5233",
   "ConnectionStrings": {
-    "FastdeliveruuSqlConnection": "Server=fastdeliveruu.db;Database=fastdeliveruu;TrustServerCertificate=True"
+    "FastdeliveruuSqlConnection": "Server=fastdeliveruu.db;Database=fastdeliveruu;TrustServerCertificate=True",
+    "Cache": "fastdeliveruu.cache:6379"
   },
   "JwtSettings": {
     "Secret": "",
