--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -25,14 +25,13 @@
     ]
   },
   "AllowedHosts": "*",
-  //"Urls": "http://*:5233",
   "ConnectionStrings": {
     "FastdeliveruuSqlConnection": "Server=fastdeliveruu.db;Database=fastdeliveruu;TrustServerCertificate=True",
     "Cache": "fastdeliveruu.cache:6379"
   },
   "JwtSettings": {
     "Secret": "",
-    "ExpiryMinutes": 60,
+    "ExpiryDays": 7,
     "EmailConfirmationExpiryMinutes": 10,
     "Issuer": "FastDeliveruu",
     "Audience": "FastDeliveruu"
