fix: return complete image url for development

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -29,6 +29,7 @@
     "FastdeliveruuSqlConnection": "Server=fastdeliveruu.db;Database=fastdeliveruu;TrustServerCertificate=True",
     "Cache": "fastdeliveruu.cache:6379"
   },
+  "ApiUrl": "http://localhost:5000",
   "JwtSettings": {
     "Secret": "",
     "ExpiryDays": 7,
@@ -41,7 +42,7 @@
     "Password": ""
   },
   "Payment": {
-    "VnPay": {
+    "Vnpay": {
       "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
       "Api": "https://sandbox.vnpayment.vn/merchant_webapi/api/transaction",
       "TmnCode": "",
