refactor: change upload file service

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -29,7 +29,6 @@
     "FastdeliveruuSqlConnection": "Server=fastdeliveruu.db;Database=fastdeliveruu;TrustServerCertificate=True",
     "Cache": "fastdeliveruu.cache:6379"
   },
-  "ApiUrl": "http://localhost:5000",
   "JwtSettings": {
     "Secret": "",
     "ExpiryDays": 7,
@@ -40,6 +39,11 @@
   "EmailOptions": {
     "SenderEmail": "",
     "Password": ""
+  },
+  "CloudinarySettings": {
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
   },
   "Payment": {
     "Vnpay": {
