fix: order formatting money when creating url and get ipaddress

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     ports:
       - 5000:5000
       - 5001:5001
+    networks:
+      - fastdeliveruu-network
 
   fastdeliveruu.db:
     image: mcr.microsoft.com/mssql/server:2019-latest
@@ -22,6 +24,8 @@ services:
       - ./.containers/fastdeliveruu-db:/var/opt/mssql/data
     ports:
       - 1433:1433    
+    networks:
+      - fastdeliveruu-network
 
   fastdeliveruu.cache:
     image: redis:latest
@@ -31,3 +35,9 @@ services:
       - ./.containers/fastdeliveruu-cache:/data
     ports:
       - 6379:6379
+    networks:
+      - fastdeliveruu-network
+
+networks:
+  fastdeliveruu-network:
+    driver: bridge
