refactor: use identity just to make my life easier

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -26,7 +26,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FastdeliveruuSqlConnection": "Server=fastdeliveruu.db;Database=fastdeliveruu;TrustServerCertificate=True",
+    "FastdeliveruuSqlConnection": "Server=fastdeliveruu.db;Database=fastdeliveruu;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "IdentitySqlConnection": "Server=fastdeliveruu.db;Database=identity;TrustServerCertificate=True;MultipleActiveResultSets=true",
     "Cache": "fastdeliveruu.cache:6379"
   },
   "JwtSettings": {
