--- a/src/FastDeliveruu.Domain/FastDeliveruu.Domain.csproj
+++ b/src/FastDeliveruu.Domain/FastDeliveruu.Domain.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
     <PackageReference Include="Dapper" Version="2.1.37" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.31" />
   </ItemGroup>
 </Project>
