refactor: add return url

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -58,5 +58,6 @@
       "Locale": "vn",
       "ReturnUrl": "http://localhost:5000/api/v1/orders/vnpay-return"
     }
-  }
+  },
+  "RedirectUrl": "http://localhost:4200"
 }
