--- a/src/FastDeliveruu.Application/FastDeliveruu.Application.csproj
+++ b/src/FastDeliveruu.Application/FastDeliveruu.Application.csproj
@@ -16,7 +16,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="RestaurantHours\Commands\" />
+    <Folder Include="RestaurantHours\Commands\DeleteRestaurantHour\" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
