refactor: refacting SeriLog to use Vietnam DateTime

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -12,14 +12,18 @@
     },
     "WriteTo": [
       {
-        "Name": "Console"
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{VietnamDateTime:HH:mm:ss} {Level:u3}] {Message}{NewLine}{Exception}"
+        }
       },
       {
         "Name": "File",
         "Args": {
           "path": "logs/log-",
           "rollingInterval": "Day",
-          "rollOnFileSizeLimit": true
+          "rollOnFileSizeLimit": true,
+          "outputTemplate": "[{VietnamDateTime:yyyy-MM-dd HH:mm:ss} {Level:u3}] {Message}{NewLine}{Exception}"
         }
       }
     ]
