refactor: add locations for shipper

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -31,7 +31,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "FastdeliveruuSqlConnection": "Server=fastdeliveruu.db;Database=fastdeliveruu;User ID=sa;Password=Password123456;TrustServerCertificate=True;MultipleActiveResultSets=true",
-    "IdentitySqlConnection": "Server=fastdeliveruu.db;Database=identity;User ID=sa;Password=Password123456;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    //"IdentitySqlConnection": "Server=fastdeliveruu.db;Database=identity;User ID=sa;Password=Password123456;TrustServerCertificate=True;MultipleActiveResultSets=true",
     "Cache": "fastdeliveruu.cache:6379"
   },
   "JwtSettings": {
