feat: add send sms to confirm phone using vonage

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -50,6 +50,10 @@
     "ApiKey": "",
     "ApiSecret": ""
   },
+  "SmsSettings": {
+    "ApiKey": "",
+    "ApiSecret": ""
+  },
   "Payment": {
     "Vnpay": {
       "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
