--- a/src/FastDeliveruu.Application/FastDeliveruu.Application.csproj
+++ b/src/FastDeliveruu.Application/FastDeliveruu.Application.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageReference Include="FluentValidation" Version="10.4.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
+    <PackageReference Include="Vonage" Version="6.0.3" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="WishLists\Commands\" />
