feat: complete paypal

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -65,6 +65,11 @@
       "CurrCode": "VND",
       "Locale": "vn",
       "ReturnUrl": "http://localhost:5000/api/v1/checkouts/vnpay-return"
+    },
+    "Paypal": {
+      "AppId": "",
+      "AppSecret": "",
+      "Mode": "sandbox"
     }
   },
   "RedirectUrl": "http://localhost:4200"
