refactor: logging and also fix delete addresses

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -54,6 +54,9 @@
     "ApiKey": "",
     "ApiSecret": ""
   },
+  "OpenCage": {
+    "ApiKey": ""
+  },
   "Payment": {
     "Vnpay": {
       "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
