--- a/src/FastDeliveruu.Infrastructure/FastDeliveruu.Infrastructure.csproj
+++ b/src/FastDeliveruu.Infrastructure/FastDeliveruu.Infrastructure.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.34.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.34.0" />
+    <PackageReference Include="OpenCage.Geocode.DotNetStandard" Version="1.6.0" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
