chore: change port

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -30,7 +30,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FastdeliveruuSqlConnection": "Server=fastdeliveruu.db;Database=fastdeliveruu;User ID=sa;Password=Password123456;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "FastdeliveruuSqlConnection": "Server=fastdeliveruu.db,1433;Database=fastdeliveruu;User ID=sa;Password=Password123456;TrustServerCertificate=True;MultipleActiveResultSets=true",
     //"IdentitySqlConnection": "Server=fastdeliveruu.db;Database=identity;User ID=sa;Password=Password123456;TrustServerCertificate=True;MultipleActiveResultSets=true",
     "Cache": "fastdeliveruu.cache:6379"
   },
