--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -75,5 +75,8 @@
       "Mode": "sandbox"
     }
   },
-  "RedirectUrl": "http://localhost:4200"
+  "AppSettings": {
+    "RedirectUrl": "http://localhost:4200/authen/login",
+    "ResetPasswordUrl": "http://localhost:4200/authen/reset-password"
+  }
 }
