hotfix: checkout vnpay

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -77,6 +77,8 @@
   },
   "AppSettings": {
     "RedirectUrl": "http://localhost:4200/authen/login",
-    "ResetPasswordUrl": "http://localhost:4200/authen/reset-password"
+    "ResetPasswordUrl": "http://localhost:4200/authen/reset-password",
+    "CheckoutSuccessRedirectUrl": "http://localhost:4200/checkout/success",
+    "CheckoutFailedRedirectUrl": "http://localhost:4200/checkout/failed"
   }
 }
