--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -76,9 +76,14 @@
     }
   },
   "AppSettings": {
-    "RedirectUrl": "http://localhost:4200/authen/login",
-    "ResetPasswordUrl": "http://localhost:4200/authen/reset-password",
-    "CheckoutSuccessRedirectUrl": "http://localhost:4200/checkout/success",
-    "CheckoutFailedRedirectUrl": "http://localhost:4200/checkout/failed"
+    //"RedirectUrl": "http://localhost:4200/authen/login",
+    //"ResetPasswordUrl": "http://localhost:4200/authen/reset-password",
+    //"CheckoutSuccessRedirectUrl": "http://localhost:4200/checkout/success",
+    //"CheckoutFailedRedirectUrl": "http://localhost:4200/checkout/failed"
+
+    "RedirectUrl": "https://polecat-enabled-aphid.ngrok-free.app/authen/login",
+    "ResetPasswordUrl": "https://polecat-enabled-aphid.ngrok-free.app/authen/reset-password",
+    "CheckoutSuccessRedirectUrl": "https://polecat-enabled-aphid.ngrok-free.app/checkout/success",
+    "CheckoutFailedRedirectUrl": "https://polecat-enabled-aphid.ngrok-free.app/checkout/failed"
   }
 }
