--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -76,14 +76,10 @@
     }
   },
   "AppSettings": {
-    //"RedirectUrl": "http://localhost:4200/authen/login",
-    //"ResetPasswordUrl": "http://localhost:4200/authen/reset-password",
-    //"CheckoutSuccessRedirectUrl": "http://localhost:4200/checkout/success",
-    //"CheckoutFailedRedirectUrl": "http://localhost:4200/checkout/failed"
+    "BaseUrl": "https://localhost:5001",
+    "RedirectUrl": "http://localhost:4200"
 
-    "RedirectUrl": "https://polecat-enabled-aphid.ngrok-free.app/authen/login",
-    "ResetPasswordUrl": "https://polecat-enabled-aphid.ngrok-free.app/authen/reset-password",
-    "CheckoutSuccessRedirectUrl": "https://polecat-enabled-aphid.ngrok-free.app/checkout/success",
-    "CheckoutFailedRedirectUrl": "https://polecat-enabled-aphid.ngrok-free.app/checkout/failed"
+    //"BaseUrl": "https://localhost:5001",
+    //"RedirectUrl": "https://polecat-enabled-aphid.ngrok-free.app"
   }
 }
