Chỉnh lại url để redirect đến dev domain của API ngork dungmcgamer

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -77,7 +77,7 @@
   },
   "AppSettings": {
     "BaseUrl": "https://localhost:5001",
-    "RedirectUrl": "http://localhost:4200"
+    "RedirectUrl": "https://millard-nonecstatic-trochaically.ngrok-free.dev"
 
     //"BaseUrl": "https://localhost:5001",
     //"RedirectUrl": "https://polecat-enabled-aphid.ngrok-free.app"
