--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -76,8 +76,13 @@
     }
   },
   "AppSettings": {
+    //local test
     "BaseUrl": "https://localhost:5001",
     "RedirectUrl": "http://localhost:4200"
+
+    //deploy ngrok + vercel
+    //"BaseUrl": "https://polecat-enabled-aphid.ngrok-free.app",
+    //"RedirectUrl": "https://fastdeliveruu-fe.vercel.app"
 
     //"BaseUrl": "https://localhost:5001",
     //"RedirectUrl": "https://polecat-enabled-aphid.ngrok-free.app"
