hotfix: add update profile picture

--- a/src/FastDeliveruu.Api/appsettings.Development.json
+++ b/src/FastDeliveruu.Api/appsettings.Development.json
@@ -87,6 +87,10 @@
     //"BaseUrl": "https://polecat-enabled-aphid.ngrok-free.app",
     //"RedirectUrl": "https://fastdeliveruu-fe.vercel.app"
 
+    //deploy ngrok + vercel
+    //"BaseUrl": "https://polecat-enabled-aphid.ngrok-free.app",
+    //"RedirectUrl": "https://fastdeliveruu-fe-plmq-git-develop-dongct2504s-projects.vercel.app"
+
     //"BaseUrl": "https://localhost:5001",
     //"RedirectUrl": "https://polecat-enabled-aphid.ngrok-free.app"
   }
