Bổ sung BaseUrl cũ để chạy local trước

--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -79,7 +79,10 @@
     "SecretKey": "this is a super secret key"
   },
   "AppSettings": {
-    "BaseUrl": "https://polecat-enabled-aphid.ngrok-free.app",
-    "RedirectUrl": "https://fastdeliveruu-fe.vercel.app"
+    //"BaseUrl": "https://polecat-enabled-aphid.ngrok-free.app",
+    //"RedirectUrl": "https://fastdeliveruu-fe.vercel.app",
+
+    "BaseUrl": "https://localhost:5001",
+    "RedirectUrl": "https://millard-nonecstatic-trochaically.ngrok-free.dev"
   }
 }
