--- a/src/FastDeliveruu.Api/appsettings.Development.json
+++ b/src/FastDeliveruu.Api/appsettings.Development.json
@@ -80,8 +80,8 @@
   },
   "AppSettings": {
     //local test
-    "BaseUrl": "https://localhost:5001",
-    "RedirectUrl": "http://localhost:4200"
+    //"BaseUrl": "https://localhost:5001",
+    //"RedirectUrl": "http://localhost:4200",
 
     //deploy ngrok + vercel
     //"BaseUrl": "https://polecat-enabled-aphid.ngrok-free.app",
@@ -93,5 +93,8 @@
 
     //"BaseUrl": "https://localhost:5001",
     //"RedirectUrl": "https://polecat-enabled-aphid.ngrok-free.app"
+
+    "BaseUrl": "https://localhost:5001",
+    "RedirectUrl": "https://millard-nonecstatic-trochaically.ngrok-free.dev"
   }
 }
