chore: change url

--- a/src/FastDeliveruu.Api/appsettings.Development.json
+++ b/src/FastDeliveruu.Api/appsettings.Development.json
@@ -80,21 +80,21 @@
   },
   "AppSettings": {
     //local test
-    //"BaseUrl": "https://localhost:5001",
-    //"RedirectUrl": "http://localhost:4200",
+    "BaseUrl": "https://localhost:5001",
+    "RedirectUrl": "http://localhost:4200",
 
-    //deploy ngrok + vercel
+    //deploy ngrok + vercel for main
     //"BaseUrl": "https://polecat-enabled-aphid.ngrok-free.app",
     //"RedirectUrl": "https://fastdeliveruu-fe.vercel.app"
 
-    //deploy ngrok + vercel
+    //deploy ngrok + vercel for develop
     //"BaseUrl": "https://polecat-enabled-aphid.ngrok-free.app",
     //"RedirectUrl": "https://fastdeliveruu-fe-plmq-git-develop-dongct2504s-projects.vercel.app"
 
     //"BaseUrl": "https://localhost:5001",
     //"RedirectUrl": "https://polecat-enabled-aphid.ngrok-free.app"
 
-    "BaseUrl": "https://localhost:5001",
-    "RedirectUrl": "https://millard-nonecstatic-trochaically.ngrok-free.dev"
+    //"BaseUrl": "https://localhost:5001",
+    //"RedirectUrl": "https://millard-nonecstatic-trochaically.ngrok-free.dev"
   }
 }
