chore: remove comma

--- a/src/FastDeliveruu.Api/appsettings.Development.json
+++ b/src/FastDeliveruu.Api/appsettings.Development.json
@@ -81,7 +81,7 @@
   "AppSettings": {
     //local test
     "BaseUrl": "https://localhost:5001",
-    "RedirectUrl": "http://localhost:4200",
+    "RedirectUrl": "http://localhost:4200"
 
     //deploy ngrok + vercel for main
     //"BaseUrl": "https://polecat-enabled-aphid.ngrok-free.app",
