--- a/src/FastDeliveruu.Api/appsettings.json
+++ b/src/FastDeliveruu.Api/appsettings.json
@@ -67,7 +67,7 @@
       "Command": "pay",
       "CurrCode": "VND",
       "Locale": "vn",
-      "ReturnUrl": "http://localhost:5000/api/v1/checkouts/vnpay-return"
+      "ReturnUrl": "https://polecat-enabled-aphid.ngrok-free.app/api/v1/checkouts/vnpay-return"
     },
     "Paypal": {
       "AppId": "",
@@ -79,10 +79,7 @@
     "SecretKey": "this is a super secret key"
   },
   "AppSettings": {
-    //"BaseUrl": "https://polecat-enabled-aphid.ngrok-free.app",
-    //"RedirectUrl": "https://fastdeliveruu-fe.vercel.app",
-
-    "BaseUrl": "https://localhost:5001",
-    "RedirectUrl": "https://millard-nonecstatic-trochaically.ngrok-free.dev"
+    "BaseUrl": "https://polecat-enabled-aphid.ngrok-free.app",
+    "RedirectUrl": "https://fastdeliveruu-fe.vercel.app"
   }
 }
